Updated Build java program and Windows batch script